# DeveloperZip-Intelligent-Project-Packaging-for-Software-Developers

./: .gitignore  README.md  daily_activity.txt  index.html  package-lock.json  package.json  setup_github.bat  tailwind.config.js  temp.txt  vite.config.ts
.github/workflows/: daily-commit.yml  deploy.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: analyzer.rs  compressor.rs  lib.rs  main.rs
